# ai-travel-agency

./: pyproject.toml
ai_travel_agency/: main.py  prompts.py  run_agent.py
ai_travel_agency/data_types/: flights_input.py  hotel_search_result.py  hotels_input.py  user_input_request.py
ai_travel_agency/graph/: basic_tool_node.py  graph_builder.py  llm_integrations.py  routers.py  state.py
ai_travel_agency/tools/: flights_search_tool.py  hotels_search_tool.py
