
[tool.poetry]
name = "hotels-finder-agent"
version = "0.1.0"
description = ""
authors = ["Amir koblyansky"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langgraph = "^0.2.0"
serpapi = "^0.1.5"
fastapi = "^0.115.0"
uvicorn = "^0.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"